--- a/index.html
+++ b/index.html
@@ -9,130 +9,142 @@
 </head>
 
 <body>
-        <section id="1">
-            <div id="header">
-                <div id="maincontent">
-                    <h1>Hi, I'm Nina Vidal, <br> a Web Development student </h1>
+    <section id="1">
+        <div id="header">
+            <div id="maincontent">
+                <h1>Hi, I'm Nina Vidal, <br> a Web Development student </h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam convallis, <br>
+                    arcu eget sollicitudin viverra, massa risus elementum urna, ac sodales nunc erat <br>
+                    a massa. Proin id.
+                </p>
+                <p id="mainbutton">Download Resume</p>
+            </div>
+            <div id="mainimage">
+                <img src="img/nina.jpg">
+            </div>
+        </div>
+    </section>
+
+    <section id="2">
+        <div id="cont">
+            <p>Formações</p>
+            <div id="form">
+
+
+                <div id="info1">
+
+                    <h2>Making a design system from scratch</h2>
+                    <p class="date">12 feb 2020 | Design Pattern </p>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam convallis, <br>
-                        arcu eget sollicitudin viverra, massa risus elementum urna, ac sodales nunc erat <br>
-                        a massa. Proin id.
-                    </p>
-                    <p id="mainbutton">Download Resume</p>
-                </div>
-                <div id="mainimage">
-                    <img src="img/nina.jpg">
-                </div>
-            </div>
-        </section>
-
-        <section id="2">
-            <div id="cont">
-                <p>Formações</p>
-                <div id="form">
-
-
-                    <div id="info1">
-
-                        <h2>Making a design system from scratch</h2>
-                        <p class="date">12 feb 2020 | Design Pattern </p>
-                        <p>
-                            Amet minim mollit non deserunt ullamco est sit <br> aliqua dolor do amet sint.
-                            Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
-                            amet.
-                        </p>
-                    </div>
-
-                    <div id="info1">
-                        <h2>Creating pixel perfect icons in Figma</h2>
-                        <p class="date">12 feb 2020 | Figma, icon design </p>
-                        <p>
-                            Amet minim mollit non deserunt ullamco est sit <br> aliqua dolor do amet sint.
-                            Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
-                            amet.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section>
-            <div id="exp">
-                <p>Experiências</p>
-
-                <div class="exp">
-                    <div class="imgexp">
-                        <img src="img/code.jpg">
-                    </div>
-                    <div class="txtexp">
-                        <h2>Designing Dashboards</h2>
-                        <p>
-                            <span class="year">2020</span>
-                            <span class="category">Dashboard</span>
-                        </p>
-                        <p>
-                            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
-                            Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
-                            amet.
-                        </p>
-                    </div>
-                </div>
-
-                <hr>
-
-                <div class="exp">
-                    <div class="imgexp">
-                        <img src="img/images.jpg">
-                    </div>
-                    <div class="txtexp">
-                        <h2>Vibrant Portraits of 2020</h2>
-                        <p>
-                            <span class="year">2018</span>
-                            <span class="category">Illustration</span>
-                        </p>
-                        <p>
-                            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
-                            Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
-                            amet.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section>
-            <div class="skills">
-                <div class="skillblock">
-                    <div class="icon">
-                        <img src="img/dev.png">
-                    </div>
-                    <h2>FrontEnd</h2>
-                    <p>Amet minim mollit non deserunt ullamco est sit <br> aliqua dolor do amet sint. Velit officia
-                        consequat
-                        <br> duis enim velit mollit. Exercitation veniam <br> consequat sunt nostrud amet.
+                        Amet minim mollit non deserunt ullamco est sit <br> aliqua dolor do amet sint.
+                        Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                        amet.
                     </p>
                 </div>
-                <div class="skillblock">
-                    <div class="icon">
-                        <img src="img/data.png">
-                    </div>
-                    <h2>BackEnd</h2>
-                    <p>Amet minim mollit non deserunt ullamco est sit <br> aliqua dolor do amet sint. Velit officia
-                        consequat
-                        <br> duis enim velit mollit. Exercitation veniam <br> consequat sunt nostrud amet.
+
+                <div id="info1">
+                    <h2>Creating pixel perfect icons in Figma</h2>
+                    <p class="date">12 feb 2020 | Figma, icon design </p>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit <br> aliqua dolor do amet sint.
+                        Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                        amet.
                     </p>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-       <footer>
+    <section>
+        <div id="exp">
+            <p>Experiências</p>
+
+            <div class="exp">
+                <div class="imgexp">
+                    <img src="img/code.jpg">
+                </div>
+                <div class="txtexp">
+                    <h2>Designing Dashboards</h2>
+                    <p>
+                        <span class="year">2020</span>
+                        <span class="category">Dashboard</span>
+                    </p>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                        Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                        amet.
+                    </p>
+                </div>
+            </div>
+
+            <hr>
+
+            <div class="exp">
+                <div class="imgexp">
+                    <img src="img/images.jpg">
+                </div>
+                <div class="txtexp">
+                    <h2>Vibrant Portraits of 2020</h2>
+                    <p>
+                        <span class="year">2018</span>
+                        <span class="category">Illustration</span>
+                    </p>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                        Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                        amet.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="skills">
+            <div class="skillblock">
+                <div class="icon">
+                    <img src="img/dev.png">
+                </div>
+                <h2>FrontEnd</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit <br> aliqua dolor do amet sint. Velit officia
+                    consequat
+                    <br> duis enim velit mollit. Exercitation veniam <br> consequat sunt nostrud amet.
+                </p>
+            </div>
+            <div class="skillblock">
+                <div class="icon">
+                    <img src="img/data.png">
+                </div>
+                <h2>BackEnd</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit <br> aliqua dolor do amet sint. Velit officia
+                    consequat
+                    <br> duis enim velit mollit. Exercitation veniam <br> consequat sunt nostrud amet.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <div class="formulario">
+        <form action="banco.php" method="post">
+            <input type="text" required placeholder="Digite seu nome">
+            <input type="email" required placeholder="Digite seu email">
+            <input type="text" required placeholder="Digite seu cargo">
+            <input type="submit" value="Enviar">
+        </form>
+    </div>
+
+
+    <footer>
         <div class="icons">
             <a href="/"><img class=social src="img/github.png"></a>
             <a href="https://x.com/ninaospam?s=21"><img class=social src="img/twitter.png"></a>
-            <a href="https://www.instagram.com/niniykp?igsh=b2o4M2FqZWhvNmlt&utm_-source=qr"><img class=social src="img/instagram.png"></a>
-            <a href="https://www.linkedin.com/in/nina-de-assis-vidal-a13140272/"><img class=social src="img/linkedin.png"></a>
+            <a href="https://www.instagram.com/niniykp?igsh=b2o4M2FqZWhvNmlt&utm_-source=qr"><img class=social
+                    src="img/instagram.png"></a>
+            <a href="https://www.linkedin.com/in/nina-de-assis-vidal-a13140272/"><img class=social
+                    src="img/linkedin.png"></a>
         </div>
-       </footer>
+    </footer>
 </body>
 
 </html>
